--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta id="ascii" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <title>STL To ASCII Generator</title>
-    <script defer="defer" src="bundle.5f6951b3191a2214dc44.js"></script>
+    <script defer="defer" src="script.js"></script>
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
@@ -27,17 +27,6 @@
           document.getElementById("copyASCII").style.display = "none",
           document.getElementById("clipboardASCII").style.display = "none"
           )
-        </script>
-      </div>
-      <div id="kofi">
-        <br><br><br>
-        <p>STL to ASCII Generator</p>
-        <p style="font-family:'Courier New'">Andrew Sink - 2022</p>
-        <p style="font-size:13px;font-family:'Courier New'">Full Code Available on <a href="https://github.com/AndrewSink/STL-to-ASCII-Generator">Github</a></p>
-        <script src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
-        <script>
-          kofiwidget2.init("Want to buy me a coffee?","#29abe0","A0A35L8LW"),
-          kofiwidget2.draw()
         </script>
       </div>
     </form>
